rettetlse af test

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Genbrug og bæredygtighed her</title>
+    <title>Genbrug og bæredygtighed</title>
 
     <link rel="stylesheet" href="css/style.css"> <!-- Link til CSS-fil -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet"> <!-- Link til fontawesome -->
